Retrieve local repo from system property or settings.xml when available